_generated-doc/2.16/config/quarkus-mailer-general-config-items.adoc

:summaryTableId: quarkus-mailer-general-config-items
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-mailer-general-config-items_configuration]]link:#quarkus-mailer-general-config-items_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-mailer-general-config-items_quarkus.mailer.dkim.enabled]]`link:#quarkus-mailer-general-config-items_quarkus.mailer.dkim.enabled[quarkus.mailer.dkim.enabled]`

[.description]
--
Enables DKIM signing.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_DKIM_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_DKIM_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-mailer-general-config-items_quarkus.mailer.dkim.private-key]]`link:#quarkus-mailer-general-config-items_quarkus.mailer.dkim.private-key[quarkus.mailer.dkim.private-key]`

[.description]
--
Configures the PKCS++#++8 format private key used to sign the email.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_DKIM_PRIVATE_KEY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_DKIM_PRIVATE_KEY+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mailer-general-config-items_quarkus.mailer.dkim.private-key-path]]`link:#quarkus-mailer-general-config-items_quarkus.mailer.dkim.private-key-path[quarkus.mailer.dkim.private-key-path]`

[.description]
--
Configures the PKCS++#++8 format private key file path.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_DKIM_PRIVATE_KEY_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_DKIM_PRIVATE_KEY_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mailer-general-config-items_quarkus.mailer.dkim.auid]]`link:#quarkus-mailer-general-config-items_quarkus.mailer.dkim.auid[quarkus.mailer.dkim.auid]`

[.description]
--
Configures the Agent or User Identifier (AUID).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_DKIM_AUID+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_DKIM_AUID+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mailer-general-config-items_quarkus.mailer.dkim.selector]]`link:#quarkus-mailer-general-config-items_quarkus.mailer.dkim.selector[quarkus.mailer.dkim.selector]`

[.description]
--
Configures the selector used to query the public key.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_DKIM_SELECTOR+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_DKIM_SELECTOR+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mailer-general-config-items_quarkus.mailer.dkim.sdid]]`link:#quarkus-mailer-general-config-items_quarkus.mailer.dkim.sdid[quarkus.mailer.dkim.sdid]`

[.description]
--
Configures the Signing Domain Identifier (SDID).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_DKIM_SDID+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_DKIM_SDID+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mailer-general-config-items_quarkus.mailer.dkim.header-canon-algo]]`link:#quarkus-mailer-general-config-items_quarkus.mailer.dkim.header-canon-algo[quarkus.mailer.dkim.header-canon-algo]`

[.description]
--
Configures the canonicalization algorithm for signed headers.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_DKIM_HEADER_CANON_ALGO+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_DKIM_HEADER_CANON_ALGO+++`
endif::add-copy-button-to-env-var[]
-- a|
`simple`, `relaxed` 
|


a| [[quarkus-mailer-general-config-items_quarkus.mailer.dkim.body-canon-algo]]`link:#quarkus-mailer-general-config-items_quarkus.mailer.dkim.body-canon-algo[quarkus.mailer.dkim.body-canon-algo]`

[.description]
--
Configures the canonicalization algorithm for mail body.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_DKIM_BODY_CANON_ALGO+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_DKIM_BODY_CANON_ALGO+++`
endif::add-copy-button-to-env-var[]
-- a|
`simple`, `relaxed` 
|


a| [[quarkus-mailer-general-config-items_quarkus.mailer.dkim.body-limit]]`link:#quarkus-mailer-general-config-items_quarkus.mailer.dkim.body-limit[quarkus.mailer.dkim.body-limit]`

[.description]
--
Configures the body limit to sign. Must be greater than zero.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_DKIM_BODY_LIMIT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_DKIM_BODY_LIMIT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-mailer-general-config-items_quarkus.mailer.dkim.signature-timestamp]]`link:#quarkus-mailer-general-config-items_quarkus.mailer.dkim.signature-timestamp[quarkus.mailer.dkim.signature-timestamp]`

[.description]
--
Configures to enable or disable signature sign timestamp.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_DKIM_SIGNATURE_TIMESTAMP+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_DKIM_SIGNATURE_TIMESTAMP+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-mailer-general-config-items_quarkus.mailer.dkim.expire-time]]`link:#quarkus-mailer-general-config-items_quarkus.mailer.dkim.expire-time[quarkus.mailer.dkim.expire-time]`

[.description]
--
Configures the expire time in seconds when the signature sign will be expired. Must be greater than zero.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_DKIM_EXPIRE_TIME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_DKIM_EXPIRE_TIME+++`
endif::add-copy-button-to-env-var[]
--|long 
|


a| [[quarkus-mailer-general-config-items_quarkus.mailer.dkim.signed-headers]]`link:#quarkus-mailer-general-config-items_quarkus.mailer.dkim.signed-headers[quarkus.mailer.dkim.signed-headers]`

[.description]
--
Configures the signed headers in DKIM, separated by commas. The order in the list matters.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_DKIM_SIGNED_HEADERS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_DKIM_SIGNED_HEADERS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-mailer-general-config-items_quarkus.mailer.truststore.password]]`link:#quarkus-mailer-general-config-items_quarkus.mailer.truststore.password[quarkus.mailer.truststore.password]`

[.description]
--
Sets the trust store password if any. Note that the password is only used for JKS and PCK++#++12 trust stores.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_TRUSTSTORE_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_TRUSTSTORE_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mailer-general-config-items_quarkus.mailer.truststore.paths]]`link:#quarkus-mailer-general-config-items_quarkus.mailer.truststore.paths[quarkus.mailer.truststore.paths]`

[.description]
--
Sets the location of the trust store files. If you use JKS or PCK++#++12, only one path is allowed. If you use PEM files, you can specify multiple paths. 
The relative paths are relative to the application working directly.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_TRUSTSTORE_PATHS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_TRUSTSTORE_PATHS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-mailer-general-config-items_quarkus.mailer.truststore.type]]`link:#quarkus-mailer-general-config-items_quarkus.mailer.truststore.type[quarkus.mailer.truststore.type]`

[.description]
--
Sets the trust store type. By default, it guesses the type from the file name extension. For instance, `truststore.pem` will be seen as a PEM file, while `truststore.jks` will be seen as a JKS file. `truststore.p12` and `truststore.pfx` will both be seen as PKCS++#++12 files. Accepted values are: `JKS`, `PEM`, `PKCS`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_TRUSTSTORE_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_TRUSTSTORE_TYPE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mailer-general-config-items_quarkus.mailer.ntlm.workstation]]`link:#quarkus-mailer-general-config-items_quarkus.mailer.ntlm.workstation[quarkus.mailer.ntlm.workstation]`

[.description]
--
Sets the workstation used on NTLM authentication.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_NTLM_WORKSTATION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_NTLM_WORKSTATION+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-mailer-general-config-items_quarkus.mailer.ntlm.domain]]`link:#quarkus-mailer-general-config-items_quarkus.mailer.ntlm.domain[quarkus.mailer.ntlm.domain]`

[.description]
--
Sets the domain used on NTLM authentication.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MAILER_NTLM_DOMAIN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MAILER_NTLM_DOMAIN+++`
endif::add-copy-button-to-env-var[]
--|string 
|

|===